# business-review

./: .gitignore  README.md  app.py  pyproject.toml
analyses/: __init__.py  five_forces.py  pestel.py  scenario_planning.py  vrio.py  wardley.py
db/: __init__.py  migrations.py  schema.sql
models/: analysis.py  business.py  research.py  scenario_planning.py  summary.py
services/: extractor.py  gemini.py
static/css/: style.css
static/js/: analysis-forms.js  app.js  quote-highlighter.js
templates/: base.html  business.html  index.html
tests/: manual_test_vrio.py  test_analysis_schemas.py  test_extractor.py  test_five_forces_sorting.py  test_scenario_planning.py
